fixing collapse close button

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -3,10 +3,10 @@
   text-decoration: none;
   border: 1px solid $gray-600;
   display: block;
-  width: 5.5rem;
+  width: auto;
   margin: auto;
-  border-radius: 3rem;
-  padding: 0;
+  padding: .2rem 1rem;
+  border-radius: 1rem;
   cursor: pointer;
   transition: all ease-in-out .3s;
 
